--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -570,6 +570,8 @@
         android:id="@+id/commentInputOverlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="false"
         android:layout_alignParentBottom="true"
         android:visibility="gone"
         tools:visibility="visible">
