--- a/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
@@ -26,15 +26,13 @@
         android:visibility="visible">
 
         <TextView
-            fontPath="fonts/TitilliumWeb-SemiBold.ttf"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorGrayMediumLight"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/post_create"
             android:textColor="@color/colorPrimaryVeryLight"
-            android:textSize="@dimen/font_size_18"
-            tools:ignore="MissingPrefix" />
+            android:textSize="16sp"/>
 
         <ImageButton
             android:id="@+id/backButton"
@@ -76,7 +74,6 @@
                 android:layout_height="@dimen/height_150"
                 android:layout_alignParentStart="true"
                 android:adjustViewBounds="true"
-                android:alpha="0.5"
                 android:scaleType="centerCrop"
                 tools:src="@drawable/background_post_create" />
 
