--- a/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
@@ -32,7 +32,7 @@
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/post_create"
             android:textColor="@color/colorPrimaryVeryLight"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <ImageButton
             android:id="@+id/backButton"
@@ -41,6 +41,7 @@
             android:layout_alignParentStart="true"
             android:adjustViewBounds="true"
             android:background="@color/colorGrayMediumLight"
+            android:foreground="?selectableItemBackgroundBorderless"
             android:scaleType="centerInside"
             android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
             android:tint="@color/colorPrimaryVeryLight" />
